completed tablet portrait component and solved social icon alignment bug

--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ body {
 .Tablet-Copy {
   color: white;
   margin-top: 5%;
-  font-size: 27px;
+  font-size: 23px;
   font-family: 'Vollkorn', serif;
   font-weight: 500;
   margin-left: 10%;
